# passingcuriosity.com

./: .gitignore  .htaccess  .travis.yml  404.html  4xx.md  Makefile  README.markdown  README.md  _config.yml  about.md  archives.md  atom.xml  cabal.project  config.ru  contact.md  index.markdown  index.md  jekyll  pc.cabal  reading.md  references.bib  references.csl  scalejpeg.sh  site.cabal  site.hs  sitemap.xml  stack.yaml  tag.md  tags.md
_ddu/: 2011-01-22-allie-micka-keynote.md  2011-01-22-exportables.md  2011-01-22-next.md  2011-01-23-application-management-systems.md  2011-01-23-turbo-charge-drupal.md
_drafts/: 2009-11-10-edge-of-the-web-2009-notes.markdown  2010-01-13-highlighting-spip-templates-with-pygents.markdown  2010-01-13-slash-delimited-date-arguments-with-views.markdown  2010-01-14-blocking-web-form-spam-with-spip.md  2010-01-14-either-or-validation-in-django.md  2010-01-14-non-atomic-transactions.markdown  2010-01-14-rot-in-haskell.md  2010-01-14-snapshot-backup-script.markdown  2010-01-14-substitute-values-into-drupal-paths-with-panels.markdown  2010-01-18-oplm2010-10-lightning-talks.markdown  2010-01-18-oplm2010-5-the-state-of-python.markdown  2010-01-18-oplm2010-6-introduction-to-pypy.markdown  2010-01-18-oplm2010-7-talloc.markdown  2010-01-18-oplm2010-8-oop-sucks.markdown  2010-01-18-oplm2010-9-facebook-apps-in-perl.markdown  2010-01-18-oplm2010-9-facebook-apps-in-perl.md  2010-01-19-1-keynote-2.markdown  2010-01-19-lightning-talks.markdown  2010-01-19-linux-containers.markdown  2010-01-19-memcached.markdown  2010-01-19-search-gmane-org.markdown  2010-01-20-lca2010-wed-2-kernel-report.markdown  2010-01-20-lca2010-wed-4-ext4.markdown  2010-01-20-lca2010-wed-7-restricting-applications.md  2010-01-21-lca2010-thur-1-keynote.markdown  2010-01-21-lca2010-thur-3-the-hydras.markdown  2010-01-21-lca2010-thur-gstreamer.markdown  2010-01-22-lca2010-fri-1-keynote.markdown  2010-01-22-lca2010-fri-1-perf.markdown  2010-01-22-lca2010-fri-wiimote.markdown  2010-01-23-domain-access.markdown  2010-01-24-config-in-code.md  2010-02-02-my-dotfiles.md  2010-03-07-date-based-drupal-interfaces-with-litecal.md  2010-03-10-drupal-cck-form_alter-and-friends.md  2010-04-10-django-tips-for-my-past-self.markdown  2010-04-14-updating-an-ini-file-with-awk.markdown  2010-04-16-updating-django-form-data.md  2010-06-09-python25-and-django-gis-on-snow-leopard.md  2010-10-11-drupal-imagecache-imagemagick-gd.md  (+9 more)
_includes/: ad.html  nav.html
_layouts/: default.html  main.html  post.html  suggest.html
_lca2011/: 2011-01-24-avoiding-development-monoculture.md  2011-01-24-linux-getting-slower.md  2011-01-25-bare-metal-recovery.md  2011-01-25-collectd.md  2011-01-25-lazy-management-gateway.md  2011-01-26-html5-video.md  2011-01-26-keynote.md  2011-01-26-making-file-systems-scale.md  2011-01-26-making-laptops-work-with-linux.md  2011-01-27-advanced-c-coding.md  2011-01-27-sendmail.md  2011-01-28-hiphop.md  2011-01-28-keynote.md
_lib/: html_truncate.rb
_posts/: 2004-11-23-graphviz-dot-and-large-graphs.markdown  2004-11-23-graphviz-dot-and-large-graphs.md  2004-11-24-graphviz-dot-large-graphs-and-crashing.markdown  2004-11-24-graphviz-dot-large-graphs-and-crashing.md  2004-11-25-data-data-everywhere.markdown  2004-11-25-data-data-everywhere.md  2004-11-26-verbosity-not-always-a-bad-thing.markdown  2004-11-26-verbosity-not-always-a-bad-thing.md  2004-12-15-a-radial-layout.markdown  2004-12-15-a-radial-layout.md  2004-12-15-summer-project.markdown  2004-12-15-summer-project.md  2004-12-18-alternative-visualizations-and-pseudo-semantic-orderings.markdown  2004-12-18-alternative-visualizations-and-pseudo-semantic-orderings.md  2004-12-20-alternative-relations-on-graphs.markdown  2004-12-20-alternative-relations-on-graphs.md  2005-01-17-more-on-modal-logic.md  (+623 more)
(+709 files in other folders)
