Name:                passingcuriosity
Version:             0.3
Synopsis:            Hakyll-based site generate for passingcuriosity.com
License:             AllRightsReserved
Author:              Thomas Sutton
Maintainer:          me@thomas-sutton.id.au
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.9.2

Executable site
  hs-source-dirs: src
  main-is: site.hs

  Build-depends:
    base >= 4 && < 5,
    containers == 0.5.*,
    hakyll == 4.3.*,
    filepath == 1.3.*,
    pandoc == 1.11.*
