name:               site
version:            0.1.0.0
synopsis:           Code and content for passingcuriosity.com
description:        Code and content for passingcuriosity.com
license:            AllRightsReserved
maintainer:         Thomas Sutton <me@thomas-sutton.id.au>
category:           Web
build-type:         Simple
cabal-version:      >= 1.10

source-repository   HEAD
  type: git
  location: https://github.com/thsutton/passingcuriosity.com/

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , blaze-html
                  , containers
                  , directory
                  , filepath
                  , hakyll == 4.6.*
                  , hashable
                  , pandoc
                  , tagsoup
                  , url
  ghc-options:      -threaded
  default-language: Haskell2010
